--- a/Lec02/Functions.ipynb
+++ b/Lec02/Functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dd42813d",
+   "id": "e58266e2",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f955111b",
+   "id": "8f62d247",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c51a0e48",
+   "id": "1c7c4705",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "44a4b490",
+   "id": "d535d012",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3e78719c",
+   "id": "7d3c01d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8b16c535",
+   "id": "7b6dee28",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "d3d706d6",
+   "id": "fba11a46",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3d5eb964",
+   "id": "d8c74174",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a3110b9a",
+   "id": "805dd825",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "30b63318",
+   "id": "6da74d9b",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "3af961fa",
+   "id": "ff329e28",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "01dea11d",
+   "id": "d1721886",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a2b4ea5e",
+   "id": "00d0b042",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "ffbf54ca",
+   "id": "900f2416",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "62a8d401",
+   "id": "6227addc",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "23af3371",
+   "id": "f3551e83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "d58a4811",
+   "id": "97146776",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "75633610",
+   "id": "a3b66211",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "0d19acb2",
+   "id": "52ef7e23",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "8e6df509",
+   "id": "b7b0ca1e",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "f6d98866",
+   "id": "7c778a36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "f7c198ed",
+   "id": "592f61eb",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "30f1cd03",
+   "id": "cec0e66c",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "7bac7f95",
+   "id": "46e748fa",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "febda8aa",
+   "id": "eff6521e",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "5c49908b",
+   "id": "699bd0c6",
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "3afbb2d8",
+   "id": "11e8b57f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "3ddec9bd",
+   "id": "a1dadad3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "919a481f",
+   "id": "8e55fe3d",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "8523cef1",
+   "id": "5f0ddbf4",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "c36d2544",
+   "id": "41c29c92",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "2a0abfeb",
+   "id": "43074b0b",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "3fca6832",
+   "id": "e9a47229",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "bba59434",
+   "id": "f961c92b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "440ea375",
+   "id": "b6421bdc",
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "36f7e60d",
+   "id": "d5ee43a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "633676e0",
+   "id": "4ab99b8a",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "6467be05",
+   "id": "6bc1f52b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "777d6a31",
+   "id": "d6142115",
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "32ce9ca2",
+   "id": "8e1679cc",
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "bf53b5d0",
+   "id": "1b7f02f6",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "057c4ee4",
+   "id": "606fca46",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "ff05713d",
+   "id": "1e4fb0bb",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "b59f9f69",
+   "id": "94787a75",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "334ce6aa",
+   "id": "134ffe00",
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "a584855d",
+   "id": "8b188079",
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "418575b8",
+   "id": "80e749f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "4e192386",
+   "id": "5ad982ab",
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "157fa9c7",
+   "id": "e2cabe1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "1cd7632f",
+   "id": "53451d99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "87d6cfef",
+   "id": "86cc21f4",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "ef7bd95a",
+   "id": "a778b671",
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "be86898e",
+   "id": "49489d9d",
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "cfd15b39",
+   "id": "83ec0e3e",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -980,8 +980,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 140,
+   "id": "fdc48052",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140732404931888\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 50\n",
+    "print(id(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "84337a49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "140732404931888"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "62fd4225",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = 1000\n",
+    "a = b"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "239b3a42",
+   "id": "608a1e89",
    "metadata": {},
    "outputs": [],
    "source": []
